http service not available

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+  box-sizing: border-box;
+}
 html, body {
-    margin: 30px;
+    margin: 50px;
     padding: 0;
+}
+ul {
+  list-style-type: none;
+}
+.lavender {
+  background-color:lavender;
+}
+.tran {
+    transition: width 2s;
+}
+.rad {
+  border-top-right-radius: 50%;
+  border-bottom-right-radius: 50%;
 }
