task without http service

--- a/src/app/address/address.component.html
+++ b/src/app/address/address.component.html
@@ -1,3 +1,3 @@
-<p>
-  {{general?.city}}, {{general?.street}}
-</p>
+<h3>{{general?.city}}</h3>
+<h3>{{general?.street}}, {{general?.building}}</h3>
+<h3>{{general?.email}}</h3>
