--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,3 +1,5 @@
-<p>
-  education works!
-</p>
+
+<h3>{{general?.institute}}</h3>
+<h3>{{general?.speciality}}</h3>
+<h3>{{general?.qualification}}</h3>
+
