--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -1,3 +1,16 @@
-<p>
-  jobs works!
-</p>
+<h3><strong>april 2017 - august 2017</strong></h3>
+<h3>{{general?.eighthjob}}</h3>
+<h3><strong>october 2016 - april 2017</strong></h3>
+<h3>{{general?.seventhjob}}</h3>
+<h3><strong>august 2013 – november 2013</strong></h3>
+<h3>{{general?.sixthjob}}</h3>
+<h3><strong>march 2012 – may 2013</strong></h3>
+<h3>{{general?.fifthjob}}</h3>
+<h3><strong>october 2009-august 2010</strong></h3>
+<h3>{{general?.fouththjob}}</h3>
+<h3><strong>december 2006- july 2009</strong></h3>
+<h3>{{general?.thirdjob}}</h3>
+<h3><strong>november 2005 – december 2006</strong></h3>
+<h3>{{general?.secondjob}}</h3>
+<h3><strong>october 2003 – november 2005</strong></h3>
+<h3>{{general?.firstjob}}</h3>
