--- a/src/app/qualities/qualities.component.html
+++ b/src/app/qualities/qualities.component.html
@@ -1,3 +1,6 @@
-<p>
-  qualities works!
-</p>
+<h3>{{general?.one}}</h3>
+<h3>{{general?.two}}</h3>
+<h3>{{general?.three}}</h3>
+<h3>{{general?.four}}</h3>
+<h3>{{general?.five}}</h3>
+
