--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -7,7 +7,7 @@
 <h3><strong>march 2012 – may 2013</strong></h3>
 <h3>{{general?.fifthjob}}</h3>
 <h3><strong>october 2009-august 2010</strong></h3>
-<h3>{{general?.fouththjob}}</h3>
+<h3>{{general?.fourthjob}}</h3>
 <h3><strong>december 2006- july 2009</strong></h3>
 <h3>{{general?.thirdjob}}</h3>
 <h3><strong>november 2005 – december 2006</strong></h3>
