--- a/src/app/date/date.component.html
+++ b/src/app/date/date.component.html
@@ -1,2 +1,2 @@
-<h3>Date of birth:{{general?.day}}</h3>
-<h3>Place of birth:{{general?.region}}</h3>
+<h3><strong>Date of birth: </strong>{{general?.day}}</h3>
+<h3><strong>Place of birth: </strong>{{general?.region}}</h3>
