--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,6 @@ ul {
   box-shadow:0 0 1em blue inset;
 }
 .rad {
-  border-top-right-radius: 50%;
-  border-bottom-right-radius: 50%;
+  border-radius: 20px;
+
 }
