--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,5 +1,5 @@
 
-<h3>{{general?.institute}}</h3>
-<h3>{{general?.speciality}}</h3>
-<h3>{{general?.qualification}}</h3>
+<h3><strong>university: </strong>{{general?.institute}}</h3>
+<h3><strong>speciality: </strong>{{general?.speciality}}</h3>
+<h3><strong>qualification: </strong>{{general?.qualification}}</h3>
 
